fixed timeline typo

--- a/public/class5.html
+++ b/public/class5.html
@@ -45,7 +45,7 @@
         </li>
         
         <li>
-          <time class="cbp_tmtime"><span>Margins and padding</span></time>
+          <time class="cbp_tmtime"><span>Video</span></time>
           <div class="cbp_tmicon cbp_tmicon-phone"></div>
           <div class="cbp_tmlabel">
             <h2>Margins and Padding</h2>
