making useful links accordion default open

--- a/public/class3.html
+++ b/public/class3.html
@@ -75,7 +75,7 @@
                 </a>
               </h4>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+            <div id="collapseOne" class="panel-collapse" role="tabpanel" aria-labelledby="headingOne">
               <div class="list-group">
                 URL of Git repository: <a href="https://github.com/mmeigooni/boilerplate.git" target="_blank">https://github.com/mmeigooni/boilerplate.git</a>
               </div>
