--- a/public/pcs.html
+++ b/public/pcs.html
@@ -183,15 +183,15 @@
         </div>
       </div>
       <div class="step">
-        <div class="dsk-circle"></div>
+        <div class="dsk-circle dsk-circle-highlight"></div>
         <h2 class="dsk-circle-title">Project 5</h2>
         <div class="dsk-content">
           <div class="dsk-info">
             <h2>Project 5</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
+            <p>This project, we'll work with divs, class/ids, and padding/margins.</p>
+            <a href="/class5" class="dsk-link">Required</a> 
           </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+          <img src="assets/images/timeline-thumbnails/day5.png" alt="" /> 
         </div>
       </div>
       <div class="step">
