--- a/public/class4.html
+++ b/public/class4.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Mushroom Learning: Class 1</title>
+  <title>Mushroom Learning: Challenge 4</title>
   <meta name="author" content="Muhammad Meigooni" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/default.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
