--- a/public/class6.html
+++ b/public/class6.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Mushroom Learning: Class 1</title>
+  <title>Mushroom Learning: Challenge 6</title>
   <meta name="author" content="Muhammad Meigooni" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/default.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
@@ -29,9 +29,9 @@
           <time class="cbp_tmtime"><span>Video</span></time>
           <div class="cbp_tmicon cbp_tmicon-phone"></div>
           <div class="cbp_tmlabel">
-            <h2>Centering things</h2>
+            <h2>Section/container/row/col-md-*</h2>
             <div class="videoWrapper">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/8SPbDWk2PFM?rel=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/3DTHQJ03W3A?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </li>
@@ -39,62 +39,35 @@
           <time class="cbp_tmtime"><span>Video</span></time>
           <div class="cbp_tmicon cbp_tmicon-phone"></div>
           <div class="cbp_tmlabel">
-            <h2>Borders</h2>
+            <h2>Adding a new row</h2>
             <div class="videoWrapper">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/RyfdRAYv4qo?rel=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </li>
-        <li>
-          <time class="cbp_tmtime"><span>Video</span></time>
-          <div class="cbp_tmicon cbp_tmicon-phone"></div>
-          <div class="cbp_tmlabel">
-            <h2>Linking External Sites</h2>
-            <div class="videoWrapper">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/oKjLV2TCzv4?rel=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </li>
-        <li>
-          <time class="cbp_tmtime"><span>Video</span></time>
-          <div class="cbp_tmicon cbp_tmicon-phone"></div>
-          <div class="cbp_tmlabel">
-            <h2>Hovers</h2>
-            <div class="videoWrapper">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/C9cTCpUCBaQ?rel=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/wAhhSb43_18?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </li>
 
-        <li id="challenge4">
-          <time class="cbp_tmtime"><span>Challenge 4</span></time>
+        <li id="challenge6">
+          <time class="cbp_tmtime"><span>Challenge 6</span></time>
 
           <div class="cbp_tmlabel">
             <h2>Try this!</h2>
             <p>Using <a href="//www.codio.com" target="_blank">Codio</a> create a website that is structured like the following:</p>
-            <img src="assets/images/challenge-pics/chal4.gif" alt="Challenge 4">
+            <img src="assets/images/challenge-pics/chal6.png" alt="Challenge 6">
             <br><br>
             <p>Requirements</p>
             <ul>
-              <li>Use a pattern for the background</li>
-              <li>Center everything in the body</li>
-              <li>Use one of the h-tags for the page title</li>
-              <li>Link the artist pictures to their Wiki page</li>
+              <li>Text is centered</li>
+              <li>Alternating background colors for each section</li>
+              <li>Each section has top and bottom padding</li>
+              <li>Alternating background colors for each row</li>
+              <li>Height of each column is anything between 100px and 500px</li>
               <li>Link the artist/song name to their respective YouTube video</li>
-              <li>Add borders to all the pictures</li>
-              <li>Change the hover effects on the borders and a tags</li>
+              <li>Border is 2px, color and style of border is up to you</li>
             </ul>
 
           </div>
         </li>
-        <li>
-          <time class="cbp_tmtime"><span>Homework</span></time>
-
-          <div class="cbp_tmlabel">
-            <h2>Do this before next class!</h2>
-            <p>Finish all the challenges up to and including Challenge 4 before Thursday!</p>
-          </div>
-        </li>
+        
       </ul>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
