--- a/public/class7.html
+++ b/public/class7.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Mushroom Learning: Challenge 6</title>
+  <title>Mushroom Learning: Challenge 7</title>
   <meta name="author" content="Muhammad Meigooni" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/default.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
@@ -29,39 +29,40 @@
           <time class="cbp_tmtime"><span>Video</span></time>
           <div class="cbp_tmicon cbp_tmicon-phone"></div>
           <div class="cbp_tmlabel">
-            <h2>Section/container/row/col-md-*</h2>
+            <h2>Bootstrap Navbar Basics</h2>
             <div class="videoWrapper">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/3DTHQJ03W3A?rel=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/TDQtpnnG8bc?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
+            <h3><a href="http://getbootstrap.com/components/#navbar" target="_blank">Link to Bootstrap Navbar</a></h3>
           </div>
         </li>
         <li>
           <time class="cbp_tmtime"><span>Video</span></time>
           <div class="cbp_tmicon cbp_tmicon-phone"></div>
           <div class="cbp_tmlabel">
-            <h2>Adding a new row</h2>
+            <h2>Bootstrap Navbar Customizing</h2>
             <div class="videoWrapper">
-              <iframe width="560" height="315" src="//www.youtube.com/embed/wAhhSb43_18?rel=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="//www.youtube.com/embed/AMFhDaKfiDA?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
+
           </div>
         </li>
 
-        <li id="challenge6">
+        <li id="challenge7">
           <time class="cbp_tmtime"><span>Challenge 6</span></time>
 
           <div class="cbp_tmlabel">
             <h2>Try this!</h2>
-            <p>Using <a href="//www.codio.com" target="_blank">Codio</a> create a website that is structured like the following:</p>
-            <img src="assets/images/challenge-pics/chal6.png" alt="Challenge 6">
+            <img src="assets/images/challenge-pics/chal7.gif" alt="Challenge 7">
             <br><br>
             <p>Requirements</p>
             <ul>
-              <li>Text is centered</li>
-              <li>Alternating background colors for each section</li>
-              <li>Each section has top and bottom padding</li>
-              <li>Alternating background colors for each row</li>
-              <li>Height of each column is anything between 100px and 500px</li>
-              <li>Border is 2px, color and style of border is up to you</li>
+              <li>Grey section background</li>
+              <li>First navbar is a col-md-12, the next two are half that size</li>
+              <li>Use different background colors for all navbars</li>
+              <li>Change the font colors and hover actions for the links</li>
+              <li>Change the "Brand" to a bootstrap glyphicon</li>
+
             </ul>
 
           </div>
