--- a/public/maimonides.html
+++ b/public/maimonides.html
@@ -207,15 +207,15 @@
         </div>
       </div>
       <div class="step">
-        <div class="dsk-circle"></div>
+        <div class="dsk-circle dsk-circle-highlight"></div>
         <h2 class="dsk-circle-title">Project 7</h2>
         <div class="dsk-content">
           <div class="dsk-info">
             <h2>Project 7</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
+            <p>Make a responsive navbar using bootstrap</p>
+            <a href="/class7" class="dsk-link">Required</a> 
           </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+          <img src="assets/images/timeline-thumbnails/day7.png" alt="" /> 
         </div>
       </div>
       <div class="step">
