--- a/public/maimonides.html
+++ b/public/maimonides.html
@@ -219,15 +219,15 @@
         </div>
       </div>
       <div class="step">
-        <div class="dsk-circle"></div>
+        <div class="dsk-circle dsk-circle-highlight"></div>
         <h2 class="dsk-circle-title">Project 8</h2>
         <div class="dsk-content">
           <div class="dsk-info">
-            <h2>Project 8</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
+            <h2>End of Semester Project</h2>
+            <p>You now know everything you need to in order to create this bootstrap site!</p>
+            <a href="/class8" class="dsk-link">Required</a> 
           </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+          <img src="assets/images/timeline-thumbnails/day8.png" alt="" /> 
         </div>
       </div>
       <div class="step">
