Added Wesley school

--- a/public/class2.html
+++ b/public/class2.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/css/class.css" />
+    <link rel="icon" type="image/png" href="assets/images/mushroom-ico.ico">
   </head>
   <body>
     <div class="container">
@@ -91,21 +92,7 @@
               <img src="assets/images/challenge-pics/permissions.gif" alt="Codio Permissions">
             </div>
           </li>
-          <li>
-            <time class="cbp_tmtime"><span>Homework</span></time>
-
-            <div class="cbp_tmlabel">
-              <h2>Do this before next class!</h2>
-              <p>Find a recipe of your favorite dessert.</p>
-              <ol>
-                <li>Make a list of all the ingredients needed to make the dessert</li>
-                <li>Make a list of all the steps needed to make the dessert</li>
-                <li>Using Google image search, find the <strong>image url</strong> of a nice picture of the dessert. Note that I want the image url, not the actual image.</li>
-              </ol>
-              <p>Once you're done, send it to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 2"</p>
-              <p><strong>Due before class next week!</strong></p>
-            </div>
-          </li>
+          
         </ul>
 
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
