--- a/public/class5.html
+++ b/public/class5.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/class.css" />
+  <link rel="icon" type="image/png" href="assets/images/mushroom-ico.ico">
 </head>
 <body>
   <div class="container">
@@ -74,14 +75,7 @@
 
           </div>
         </li>
-        <li>
-          <time class="cbp_tmtime"><span>Homework</span></time>
-
-          <div class="cbp_tmlabel">
-            <h2>Do this before next class!</h2>
-            <p>Finish all the challenges up to and including Challenge 5 before next class!</p>
-          </div>
-        </li>
+        
       </ul>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
