--- a/public/class6.html
+++ b/public/class6.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="assets/styles/css/class.css" />
+  <link rel="icon" type="image/png" href="assets/images/mushroom-ico.ico">
 </head>
 <body>
   <div class="container">
