--- a/public/class1.html
+++ b/public/class1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/styles/css/theme.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/css/default.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/css/component.css" />
+    <link rel="icon" type="image/png" href="assets/images/mushroom-ico.ico">
     <script src="assets/js/modernizr.custom.js"></script>
   </head>
   <body>
@@ -45,7 +46,7 @@
                 <li>Change the background color on both of the buttons</li>
                 <li>Change the font color on both of the buttons</li>
               </ul>
-              <p>Once you're done, take a screenshot of your page and email it to <a href="mailto:review@mushroomlearning.com?Subject=Challenge%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Challenge 1"</p>
+
             </div>
           </li>
           <li>
@@ -58,33 +59,7 @@
               </div>
             </div>
           </li>
-          <li>
-            <time class="cbp_tmtime"><span>QA</span></time>
-
-            <div class="cbp_tmlabel">
-              <h2>Answer these!</h2>
-              <!-- Change the width and height values to suit you best -->
-              <div class="typeform-widget" data-url="https://mushroomlearning.typeform.com/to/aCLkeq" data-text="quiz1" style="width:100%;height:500px;"></div>
-              <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-              <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_aCLkeq&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
-
-            </div>
-          </li>
-          <li>
-            <time class="cbp_tmtime"><span>Homework</span></time>
-
-            <div class="cbp_tmlabel">
-              <h2>Do this before next class!</h2>
-              <p>Pick a category, either books or movies and do the following:</p>
-              <ol>
-                <li>Make a list of your 3 favorites in your category. For example, if I picked books, I would make a list of my 3 favorite books.</li>
-                <li>Write at least one sentence on why each of the items made it on your favorites list</li>
-                <li>Using Google image search, find a link to a picture of each of your 3 favorite things</li>
-              </ol>
-              <p>Once you're done, email sentences and the links of the pictures to <a href="mailto:review@mushroomlearning.com?Subject=Homework%201" target="_blank">review@mushroomlearning.com</a> with the subject line "Homework 1"</p>
-              <p><strong>Due before midnight next class!</strong></p>
-            </div>
-          </li>
+          
         </ul>
       </div>
     </div>
