added city school

--- a/public/cityschool.html
+++ b/public/cityschool.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Mushroom Learning -- The Wesley School</title>
+  <title>Mushroom Learning -- The City School</title>
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
   <link rel="stylesheet" href="assets/styles/css/theme.css" />
