update city school

--- a/public/cityschool.html
+++ b/public/cityschool.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="assets/styles/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
   <link rel="stylesheet" href="assets/styles/css/theme.css" />
-  <link rel="icon" type="image/png" href="assets/images/mushroom-ico.ico">
   <script type="text/javascript" src="assets/js/jquery-1.10.1.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/jmpress.min.js"></script>
@@ -139,7 +138,8 @@
         <div class="dsk-info">
           <h2>Project 1 -- Getting Started</h2>
           <p>We're going to spend Project 1 playing with Chrome Inspector and setting up your Github account!</p>
-          <a href="/class1" class="dsk-link">Start Project</a> 
+          <a href="/class1" class="dsk-link">Required</a> 
+          <a href="/class1ext" class="dsk-link">Bonus</a> 
         </div>
         <img src="assets/images/timeline-thumbnails/day1.png" alt="" /> 
       </div>
@@ -151,7 +151,8 @@
         <div class="dsk-info">
           <h2>Project 2</h2>
           <p>Last project we took an existing site and swapped out certain elements. In this class, you will start learning how to write HTML and CSS from scratch!</p>
-          <a href="/class2" class="dsk-link">Start Project</a> 
+          <a href="/class2" class="dsk-link">Required</a> 
+          <a href="/#" class="dsk-link">Bonus</a> 
         </div>
         <img src="assets/images/timeline-thumbnails/day2.png" alt="" /> 
       </div>
@@ -163,13 +164,13 @@
         <div class="dsk-info">
           <h2>Project 3</h2>
           <p>In this project, you will learn how to make lists.</p>
-          <a href="/class3" class="dsk-link">Start Project</a> 
+          <a href="/class3" class="dsk-link">Required</a> 
+          <a href="/#" class="dsk-link">Bonus</a>       
         </div>
         <img src="assets/images/timeline-thumbnails/day3.png" alt="" /> 
       </div>
     </div>
-    
-      <div class="step">
+    <div class="step">
       <div class="dsk-circle dsk-circle-highlight"></div>
       <h2 class="dsk-circle-title">Project 4</h2>
       <div class="dsk-content">
@@ -194,39 +195,39 @@
         </div>
       </div>
       <div class="step">
-        <div class="dsk-circle"></div>
+        <div class="dsk-circle dsk-circle-highlight"></div>
         <h2 class="dsk-circle-title">Project 6</h2>
         <div class="dsk-content">
           <div class="dsk-info">
             <h2>Project 6</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
+            <p>This is our first introduction to bootstrap! Use a grid system to create some responsive boxes.</p>
+            <a href="/class6" class="dsk-link">Required</a> 
           </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+          <img src="assets/images/timeline-thumbnails/day6.png" alt="" /> 
         </div>
       </div>
       <div class="step">
-        <div class="dsk-circle"></div>
+        <div class="dsk-circle dsk-circle-highlight"></div>
         <h2 class="dsk-circle-title">Project 7</h2>
         <div class="dsk-content">
           <div class="dsk-info">
             <h2>Project 7</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
+            <p>Make a responsive navbar using bootstrap</p>
+            <a href="/class7" class="dsk-link">Required</a> 
           </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+          <img src="assets/images/timeline-thumbnails/day7.png" alt="" /> 
         </div>
       </div>
       <div class="step">
-        <div class="dsk-circle"></div>
+        <div class="dsk-circle dsk-circle-highlight"></div>
         <h2 class="dsk-circle-title">Project 8</h2>
         <div class="dsk-content">
           <div class="dsk-info">
-            <h2>Project 8</h2>
-            <p>This class is locked! Have you already finished the last class? Try working on the extension activites.</p>
-            <a href="#" class="dsk-link">OK</a> 
+            <h2>End of Semester Project</h2>
+            <p>You now know everything you need to in order to create this bootstrap site!</p>
+            <a href="/class8" class="dsk-link">Required</a> 
           </div>
-          <img src="assets/images/timeline-thumbnails/lock.png" alt="" /> 
+          <img src="assets/images/timeline-thumbnails/day8.png" alt="" /> 
         </div>
       </div>
       <div class="step">
