fixing quote margins

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
 				<div class="row" id="quotes">
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="col-lg-3">
-							<img src="assets/images/jobs.png" alt="Steve Jobs" id="left-quote-pic">
+							<img src="assets/images/jobs.png" alt="Steve Jobs" id="left-quote-pic" class="quote-pic">
 						</div>
 						<div class="col-lg-9">
 							<p class="quote-width">"I think everybody in this country should learn how to program a computer because it teaches you how to think."</p>
@@ -125,7 +125,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="col-lg-3">
-							<img src="assets/images/susan.png" alt="Susan Wojcicki" id="middle-quote-pic">
+							<img src="assets/images/susan.png" alt="Susan Wojcicki" id="middle-quote-pic" class="quote-pic">
 						</div>
 						<div class="col-lg-9">
 							<p class="quote-width">"Learning to code makes kids feel empowered, creative, and confident. If we want our young women to retain these traits into adulthood, a great option is to expose them to computer programming in their youth."</p>
@@ -135,7 +135,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 						<div class="col-lg-3">
-							<img src="assets/images/gabe.png" alt="Gabe Newell" id="right-quote-pic">
+							<img src="assets/images/gabe.png" alt="Gabe Newell" id="right-quote-pic" class="quote-pic">
 						</div>
 						<div class="col-lg-9">
 							<p class="quote-width">"The programmers of tomorrow are the wizards of the future. You're going to look like you have magic powers compared to everybody else."</p>
